--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     
         <!-- fonts -->
-        <link href='http://fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,400,700' rel='stylesheet' type='text/css'>
+<link href='https://fonts.googleapis.com/css?family=Elsie:400,900|Work+Sans:600,400' rel='stylesheet' type='text/css'>
 
         <!-- Plugin CSS -->
         <link rel="stylesheet" href="build/css/plugins.min.css">
@@ -40,7 +40,251 @@
         <div class="SiteWrapper">
 
             <main class="SiteMain" role="main">
-                <p>test test</p>
+
+                <div class="Main">
+                    <div class="visuals">
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                    </div>
+                    <div class="Main__big">
+                        <p>
+                            Do you like <span>clouds?</span> 
+                            Do you like <span>art?</span> 
+                            How about <span>cows?</span> 
+                            What about <span>infinity mirrors?</span>
+                        </p>
+                    </div>
+                    <div class="Main__imgGroup Main__imgGroup1">
+                        <div class="Main__imgText">
+                            <p>What about this thing? You like this?</p>
+                        </div>
+                        <div class="Main__img img1">
+                            <img src="img/cloud_3.gif" alt="Jessie Vogel Artwork"/>
+                        </div>
+                    </div>
+                    <div class="Main__imgGroup Main__imgGroup2">
+                        <div class="Main__imgText">
+                            <p>How about these people? You like them?</p>
+                            <p class="small">What ...</br> are they eating carrots?</p>
+                        </div>
+                        <div class="Main__img img2">
+                            <img src="img/cows.jpg" alt="Nat and Veronica Cows"/>
+                        </div>
+                    </div>
+                </div>
+                <div class="Secondary">
+                    <div class="Secondary__text">
+                        <p>Check it all out Tonight!</p>
+                        <p class="small">Saturday, March 11</p>
+                        <p class="small"> at <a href="http://www.nolafront.org/">The Front</a>, from 6 - 10</p>
+                        <p class="tiny"><strong>5:00pm:</strong> <a href="http://jessievogel.com/">Jessie</a> and <a href="http://www.natandveronica.org/">Nat & Veronica</a> talk about all this stuff</p>
+                        <p class="tiny"><strong>6:30pm:</strong> The Cows Will Roam</p>
+                    </div>
+                </div>
+                <div class="Tertiary">
+                    <div class="Tertiary__text">
+
+                        <input type="submit" value="Go!" />
+                        <input type="submit" value="I know you wanna" />
+                        <input type="submit" value="Just do it!" />
+                        <input type="submit" value="See some Art!" />
+                        <input type="submit" value="I heart art!" />
+                        <input type="submit" value="Cows!" />
+                        <input type="submit" value="Clouds!" />
+                        <input type="submit" value="Go to the show!" />
+                        <input type="submit" value="Lets make a plan" />
+                        <input type="submit" value="Go to the show" />
+                        <input type="submit" value="See art" />
+                        <input type="submit" value="Support local art" />
+                        <input type="submit" value="I like art" />
+                        <input type="submit" value="Lets go!" />
+                        <input type="submit" value="Lets do it!" />
+                        <input type="submit" value="Ohh yeaaah!!!" />
+                        <input type="submit" value="$2 beer!" />
+                        <input type="submit" value="Art and stuff!" />
+                        <input type="submit" value="Performance Art!" />
+                        <input type="submit" value="To the gallery!" />
+                        <input type="submit" value="I'm in" />
+                        <input type="submit" value="All the way!" />
+                        <input type="submit" value="I'll be there" />
+                        <input type="submit" value="Count on me" />
+                        <input type="submit" value="Sounds fun!" />
+                        <input type="submit" value="Awww yeaaa" />
+                        <input type="submit" value="pretty cool" />
+                        <input type="submit" value="Lets go to the show!" />
+                        <input type="submit" value="OK!" />
+                        <input type="submit" value="10-4" />
+                        <input type="submit" value="See ya soon" />
+                        <input type="submit" value="Save me a seat!" />
+                        <input type="submit" value="Can't wait" />
+                        <input type="submit" value="I'm excited" />
+                        <input type="submit" value="I'm pumped" />
+                        <input type="submit" value="I'm psyched" />
+                        <input type="submit" value="thumbs up" />
+                        <input type="submit" value="Go!" />
+                        <input type="submit" value="Go!" />
+                        <input type="submit" value="Go!" />
+                        <input type="submit" value="Go!" />
+                        <input type="submit" value="Go!" />
+                        <input type="submit" value="Go!" />
+                        <input type="submit" value="Go!" />
+                        <input type="submit" value="Go!" />
+                        <input type="submit" value="Go!" />
+                        <input type="submit" value="Go!" />
+                        <input type="submit" value="Go!" />
+                        <input type="submit" value="Go!" />
+                        <input type="submit" value="Go!" />
+                        <input type="submit" value="Go!" />
+                        <input type="submit" value="Go!" />
+                        <input type="submit" value="Go!" />
+                        <input type="submit" value="Go!" />
+                        <input type="submit" value="Go!" />
+                        <input type="submit" value="Go!" />
+                        <input type="submit" value="Go!" />
+                        <input type="submit" value="Go!" />
+                        <input type="submit" value="Go!" />
+                        <input type="submit" value="Go!" />
+                        <input type="submit" value="Go!" />
+                        <input type="submit" value="Go!" />
+                        <input type="submit" value="Go!" />
+                        <input type="submit" value="Go!" />
+                        <input type="submit" value="Go!" />
+                        <input type="submit" value="Go!" />
+                        <input type="submit" value="Go!" />
+                        <input type="submit" value="Go!" />
+                        <input type="submit" value="Go!" />
+                        <input type="submit" value="Go!" />
+                        <input type="submit" value="Go!" />
+                        <input type="submit" value="Go!" />
+                        <input type="submit" value="Go!" />
+                        <input type="submit" value="Go!" />
+                        <input type="submit" value="Go!" />
+                        <input type="submit" value="Go!" />
+                        <input type="submit" value="Go!" />
+                        <input type="submit" value="Go!" />
+                        <input type="submit" value="Go!" />
+                        <input type="submit" value="Go!" />
+                        <input type="submit" value="Go!" />
+                        <input type="submit" value="Go!" />
+                        <input type="submit" value="Go!" />
+                        <input type="submit" value="Go!" />
+                        <input type="submit" value="Go!" />
+                        <input type="submit" value="Go!" />
+                        <input type="submit" value="Go!" />
+                        <input type="submit" value="Go!" />
+                        <input type="submit" value="Go!" />
+                        <input type="submit" value="Go!" />
+                        <input type="submit" value="Go!" />
+                        <input type="submit" value="Go!" />
+                        <input type="submit" value="Go!" />
+                        <input type="submit" value="Go!" />
+                        <input type="submit" value="Go!" />
+                        <input type="submit" value="Go!" />
+                        <input type="submit" value="Go!" />
+                        <input type="submit" value="Go!" />
+                        <input type="submit" value="Go!" />
+                        <input type="submit" value="Go!" />
+                    </div>
+                </div>
+
             </main><!--/.main-->
 
         </div><!-- .SiteWrapper -->
