favicons and facebook share

--- a/index.html
+++ b/index.html
@@ -2,11 +2,18 @@
 <html class="no-js" lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Jessie</title>
-        <meta name="description" content="Only the best frickin theme ever">
+        <title>Clouds/Cows</title>
+        <meta name="description" content="Original art and performance by Jessie Vogel, Nat Kusinitz, and Veronica Hunsinger-Loe.">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    
+        <meta property="og:locale" content="en_US"/>
+        <meta property="og:type" content="website"/>
+        <meta property="og:title" content="Do you like clouds? Do you like art? How about cows? What about infinity mirrors?"/>
+        <meta property="og:description" content="Come to The Front gallery tonight for some curious clouds and carrot eating cows. Original art and performance by Jessie Vogel, Nat Kusinitz, and Veronica Hunsinger-Loe."/>
+        <meta property="og:url" content="http://b.illbrown.com/CloudsCows/ "/>
+        <meta property="og:site_name" content="Clouds Cows"/>
+        <meta property="og:image" content="http://b.illbrown.com/CloudsCows/img/CloudsCows.jpg"/>
+
         <!-- fonts -->
 <link href='https://fonts.googleapis.com/css?family=Elsie:400,900|Work+Sans:600,400' rel='stylesheet' type='text/css'>
 
@@ -16,8 +23,8 @@
         <!-- Custom CSS -->
         <link rel="stylesheet" href="build/css/main.min.css">
 
-        <link rel="icon" type="image/png" sizes="64x64" href="favicons/favicon.png">
-        <!--[if IE]><link rel="shortcut icon" href="favicons/favicon.ico"><![endif]-->
+        <link rel="icon" type="image/png" sizes="64x64" href="favicon.png">
+        <!--[if IE]><link rel="shortcut icon" href="favicon.ico"><![endif]-->
 
         <!-- Takana, for in-browser styling -->
         <script type="text/javascript" src="http://localhost:48626/takana.js"></script>
